Added - shadow bot assigns extra minions to RB