@@ -163,23 +163,23 @@ public class DecisionToActions {
                     }
                 }
             }
-//            case PlayerAssignMinionsDecision playerAssignMinionsDecision -> {
-//                List<String> minionIds = Arrays.asList(decision.getDecisionParameters().get("minions"));
-//                List<PhysicalCard> minions = minionIds.stream().map(s -> {
-//                    int physicalId = Integer.parseInt(s);
-//                    return game.getGameState().findCardById(physicalId);
-//                }).toList();
-//
-//                List<String> freeCharacterIds = Arrays.asList(decision.getDecisionParameters().get("freeCharacters"));
-//                List<PhysicalCard> freeCharacters = freeCharacterIds.stream().map(s -> {
-//                    int physicalId = Integer.parseInt(s);
-//                    return game.getGameState().findCardById(physicalId);
-//                }).toList();
-//
-//                boolean fpAssignment = decision.getDecisionParameters().get("player")[0].equals("fp");
-//
-//                return List.of(new AssignMinionsAction2(decision.getText(), minions, freeCharacters, fpAssignment, game));
-//            }
+            case PlayerAssignMinionsDecision playerAssignMinionsDecision -> {
+                List<String> minionIds = Arrays.asList(decision.getDecisionParameters().get("minions"));
+                List<PhysicalCard> minions = minionIds.stream().map(s -> {
+                    int physicalId = Integer.parseInt(s);
+                    return game.getGameState().findCardById(physicalId);
+                }).toList();
+
+                List<String> freeCharacterIds = Arrays.asList(decision.getDecisionParameters().get("freeCharacters"));
+                List<PhysicalCard> freeCharacters = freeCharacterIds.stream().map(s -> {
+                    int physicalId = Integer.parseInt(s);
+                    return game.getGameState().findCardById(physicalId);
+                }).toList();
+
+                boolean fpAssignment = decision.getDecisionParameters().get("player")[0].equals("fp");
+
+                return List.of(new AssignMinionsAction(decision.getText(), minions, freeCharacters, fpAssignment, game));
+            }
             case ActionSelectionDecision actionSelectionDecision -> {
                 if (decision.getText().equals(REQUIRED_RESPONSES)) {
                     List<String> actionIds = Arrays.asList(decision.getDecisionParameters().get("actionId"));
